src/test/ui/unboxed-closures/unboxed-closures-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/unboxed-closures-type-mismatch.rs:15:15
   |
LL |     let z = f(1_usize, 2);    //~ ERROR mismatched types
   |               ^^^^^^^ expected isize, found usize

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
